--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,37 @@
-<h1>Prueba calendario</h1>
-<p>Pagina de bienvenida</p>
-<% if user_signed_in? %>
-<p><%= link_to "Crear nuevo evento",new_event_path%></p>
-<% end %>
+    <div id="page-wrapper">
+
+        <div class="container-fluid">
+
+            <!-- Page Heading -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <center>
+                        <h1 class="page-header">
+                            Bienvenido
+                        </h1>
+                    </center>
+                </div>
+            </div>
+            <!-- /.row -->
+
+            <div class="row">
+                <center>
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-calendar fa-fw"></i>Eventos</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="morris-area-chart"></div>
+                            </div>
+                        </div>
+                    </div>
+                </center>
+            </div>
+            <!-- /.row -->
+
+        </div>
+        <!-- /.container-fluid -->
+
+    </div>
+    <!-- /#page-wrapper -->
