Mejora interfaz grafica e implementa inicios de funcionalidad

--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -102,7 +102,7 @@ body {
 <div class="logo"></div>
 <div class="login-block">
     <h1>BIENVENIDO</h1>
-    <button><%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %></button>
+    <button><%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2)+"/" %></button>
 </div>
 </body>
 
