--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,12 +5,13 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="icon-bar"></span>
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">PagWeb</a>
+            <!-- <a class="navbar-brand" href="index.html">PagWeb</a> -->
+            <%=link_to "PagWeb" ,root_url,class:"navbar-brand" %>
         </div>
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
@@ -63,7 +64,7 @@
                         </a>
                     </li>
                     <li class="message-footer">
-                        <a href="#">Lee todos los mensajes</a>
+                        <a href="#">Ver eventos</a>
                     </li>
                 </ul>
             </li>
@@ -76,7 +77,10 @@
                     <li class="divider"></li>
                     <li>
                         <!--<a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>-->
-                        <%=link_to "Log Out" ,destroy_user_session_path,:method => :delete %>
+
+                        <%= link_to destroy_user_session_path,method: :delete do %>
+                            <i class="fa fa-fw fa-power-off"></i> Log out
+                        <% end %>
 
                     </li>
                 </ul>
@@ -85,17 +89,27 @@
         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav side-nav">
-                <li class="active">
-                    <a href="index.html"><i class="fa fa-fw fa-calendar"></i> Mis actividades</a>
+                <!-- Sombrear pestaña actual-->
+                <% if current_page?(root_url)%>
+                    <li class="active">
+                <%else%>
+                    <li>
+                <%end%>
+                    <%=link_to "Inicio" ,root_url,class:"fa fa-fw fa-check-square-o" %>
                 </li>
-                <li>
-                    <a href="charts.html"><i class="fa fa-fw fa-envelope-o"></i> Mensajes</a>
+                <% if current_page?(root_url)%>
+                    <li class="active">
+                <%else%>
+                    <li>
+                <%end%>
+                    <%=link_to "Eventos Proximos" ,root_url,class:"fa fa-fw fa-calendar" %> 
                 </li>
-                <li>
-                    <a href="tables.html"><i class="fa fa-fw fa-check-square-o"></i> Mis suscripciones</a>
-                </li>
-                <li>
-                    <a href="forms.html"><i class="fa fa-fw fa-book"></i> Agregar materias</a>
+            <% if current_page?(subjects_path)||current_page?(new_subject_path)%>
+                    <li class="active">
+                <%else%>
+                    <li>
+                <%end%>
+                    <%=link_to "Materias" ,subjects_path+"/",class:"fa fa-fw fa-book" %> 
                 </li>
             </ul>
         </div>
