--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,37 +1,27 @@
-    <div id="page-wrapper">
+<!-- Page Heading -->
+<div class="row">
+    <div class="col-lg-12">
+            <h1 class="page-header">
+                Bienvenido
+            </h1>
+    </div>
+</div>
+<!-- /.row -->
 
-        <div class="container-fluid">
-
-            <!-- Page Heading -->
-            <div class="row">
-                <div class="col-lg-12">
+<div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-calendar fa-fw"></i>Eventos</h3>
+                </div>
+                <div class="panel-body">
                     <center>
-                        <h1 class="page-header">
-                            Bienvenido
-                        </h1>
+                        <div id="morris-area-chart">
+
+                        </div>
                     </center>
                 </div>
             </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <center>
-                    <div class="col-lg-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-calendar fa-fw"></i>Eventos</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-area-chart"></div>
-                            </div>
-                        </div>
-                    </div>
-                </center>
-            </div>
-            <!-- /.row -->
-
         </div>
-        <!-- /.container-fluid -->
-
-    </div>
-    <!-- /#page-wrapper -->
+</div>
+<!-- /.row -->
