--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,17 +2,16 @@
 <div class="row">
     <div class="col-lg-12">
             <h1 class="page-header">
-                Bienvenido
+                Eventos
             </h1>
     </div>
 </div>
-<!-- /.row -->
 
 <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-check-square-o fa-fw"></i>Inicio</h3>
+                    <h3 class="panel-title"><i class="fa fa-check-square-o fa-fw"></i>Mis eventos</h3>
                 </div>
                 <div class="panel-body">
                     <center>
@@ -24,4 +23,3 @@
             </div>
         </div>
 </div>
-<!-- /.row -->
