--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -13,24 +13,24 @@
 
   <div class="field">
     <%= f.label :Numero_de_grupo %><br>
-    <%= f.number_field :group_number, placeholder: "3365",class:"form-control" %>
+    <%= f.number_field :group_number, placeholder: "Por ejemplo: 33215",class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :Semestre %><br>
-    <div class="form-control-semester"><%= strPlaceholder=(Time.now.year+1).to_s+" -" %> </div>
-    <%= f.text_field :semester, placeholder: "1",class:"form-control-semester" %>
-  </div>
+  <!-- <div class="field">
+    <%#= f.label :Semestre %><br>
+    <div class="form-control-semester"><%#= strPlaceholder=(Time.now.year+1).to_s+" -" %> </div>
+    <%#= f.text_field :semester, placeholder: "1",class:"form-control-semester" %>
+  </div> -->
 
 
   <div class="field">
     <%= f.label :Nombre_de_la_materia %><br>
-    <%= f.text_field :name, placeholder: "Algebra Lineal" ,class:"form-control"%>
+    <%= f.text_field :name, placeholder: "Por ejemplo: Algebra Lineal" ,class:"form-control"%>
   </div>
 
   <div class="field">
     <%= f.label :Descripcion_o_informacion_adicional %><br>
-    <%= f.text_area :body , placeholder: "Grupo de Juan Perez de las 13 hrs",class:"form-control" %>
+    <%= f.text_area :body ,rows: "5", placeholder: "Por ejemplo: Algebra Lineal del semestre 2016-1 para alumnos que cursan la materia de Algebra Lineal con Juan Perez a las 13:00 horas",class:"form-control" %>
   </div>
 
   <p></p>
