--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,32 +1,56 @@
 <%= render :partial => 'layouts/materias' %>
 
-<div class="row">
+<!--Si no hay materias -->
+<%unless @subjects.present? %>
+  <div class="row">
+          <div class="col-lg-12">
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <h3 class="panel-title"><i class="fa fa-calendar fa-fw"></i>Lista de materias</h3>
+                  </div>
+                  <div class="panel-body">
+                      <center>
+                          <div id="morris-area-chart">
+                            Por el momento no hay ninguna materia.
+                          </div>
+                      </center>
+                  </div>
+              </div>
+          </div>
+  </div>
+<%end%>
+
+<!--Si hay materias, iteramos una por una y le damos formato-->
+<% @subjects.each do |subject| %>
+  <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-book fa-fw"></i>Lista de materias</h3>
+                    <!--Encabezado con enlace a la materia-->
+                    <h3 class="panel-title">
+                        <%= link_to subject do %>
+                          <i class="fa fa-book fa-fw"></i><%=Time.now.year%>-<%=subject.semester%> <%=subject.name%>
+                        <% end %>
+                    </h3>
                 </div>
-                <div class="panel-body">
-                    <center>
-                    <% @subjects.each do |subject| %>
+                  <div class="panel-body">
                       <div id="morris-area-chart">
                           <p><%= subject.user.name %></p>
                           <p><%= subject.group_number %></p>
-                          <p><%= subject.name %></p>
                           <p><%= subject.body %></p>
-                          <%= link_to 'Show', subject %>
-                          <%= link_to 'Edit', edit_subject_path(subject) %>
-                          <%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %>
-                      </div>
-                    <% end %>
-                    </center>
-                  <%#If user is teacher, show him the create subject path%>
-                  <% if current_user.is_teacher? %>
-                    <%= link_to new_subject_path+"/" do %>
-                     <i class="fa fa-plus fa-fw"></i> Crear materia
-                    <% end %>
-                  <%end%>
+                          <!--Si el usuario es administrador o el usuario es maestro, mostrar enlaces a editar y borrar-->
+                          <% if current_user == subject.user || current_user.is_admin?%>
+                            <%= link_to edit_subject_path(subject) do %>
+                                <i class="fa fa-edit fa-fw"></i> Editar
+                            <% end %>
+                            |
+                            <%= link_to subject, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                                <i class="fa fa-trash fa-fw"></i> Eliminar
+                            <% end %>
+                          <%end%>
+                     </div>
                 </div>
             </div>
         </div>
-</div>
+  </div>
+<% end %>
