--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,12 +1,14 @@
+<!-- Encabezado de "Materias"-->
 <%= render :partial => 'layouts/materias' %>
+
 <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
+                <!-- Creamos encabezado de la materia-->
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-book fa-fw"></i><%= @subject.name %>  <%= Time.now.year+1%>-<%=@subject.semester%></h3>
+                    <h3 class="panel-title"><i class="fa fa-book fa-fw"></i><%= @subject.name %> <%=@subject.semester%></h3>
                 </div>
                 <div class="panel-body">
-                    <center>
                       <p>
                         <strong>Nombre del profesor:</strong>
                           <%= @subject.user.name %>
@@ -24,25 +26,26 @@
 
                         <%if @subject.google_calendar_id%>
                           <p>
+                            <center>
                             <%urlGoogleCalendar="https://calendar.google.com/calendar/embed?src="+@subject.google_calendar_id.gsub('@','%40')+"&ctz=America/Mexico_City"%>
                             <iframe src=<%=urlGoogleCalendar%> style="border:0" width="500" height="400" frameborder="0" scrolling="no"></iframe>
+                            </center>
                           </p>
                         <%end%>
-                    </center>
-                  <%#If user is teacher, show him the create subject path%>
-                  <% if current_user.is_teacher? %>
-                    <%= link_to new_subject_path+"/" do %>
-                     <i class="fa fa-plus fa-fw"></i> Crear materia
+                    <%= link_to subjects_path+"/" do %>
+                        <i class="fa fa-arrow-left fa-fw"></i> Atras
                     <% end %>
-                  <%end%>
+                    <% if current_user == @subject.user || current_user.is_admin?%>
+                     | 
+                      <%= link_to edit_subject_path(@subject) do %>
+                          <i class="fa fa-edit fa-fw"></i> Editar
+                      <% end %>
+                      |
+                      <%= link_to @subject, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                          <i class="fa fa-trash fa-fw"></i> Eliminar
+                      <% end %>
+                    <%end%>
                 </div>
             </div>
         </div>
 </div>
-
-<%= link_to subjects_path do %>
-    <i class="fa fa-arrow-left fa-fw"></i> Atras
-<% end %>
-|
-<%= link_to 'Edit', edit_subject_path(@subject) %>
-
