--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -4,7 +4,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-plus fa-fw"></i>Agregar Materia</h3>
+                    <h3 class="panel-title"><i class="fa fa-plus fa-fw"></i>Editar Materia</h3>
                 </div>
                 <div class="panel-body">
                     <center>
@@ -20,5 +20,5 @@
 <%= link_to subjects_path+"/" do %>
     <i class="fa fa-arrow-left fa-fw"></i> Atras
 <% end %> |
-<%= link_to 'Show', @subject %> 
+<%= link_to 'Ver Materia', @subject %> 
 
