--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -6,8 +6,9 @@
 
 <title>Elegant Login - Designscrazed</title>
 <style>
+
 body {
-    background: url('http://i.imgur.com/Eor57Ae.jpg') no-repeat fixed center center;
+    background: url('assets/images/dark_embroidery.png') no-repeat fixed center center;
     background-size: cover;
     font-family: Montserrat;
 }
@@ -99,10 +100,12 @@ body {
 
 <body>
 
-<div class="logo"></div>
+
 <div class="login-block">
     <h1>BIENVENIDO</h1>
-    <button><%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2)+"/" %></button>
+    <%= link_to user_omniauth_authorize_path(:google_oauth2)+"/" do %>
+      <button><i class="fa fa-google fa-fw"></i>Inicia sesion con google</button>
+    <% end %>
 </div>
 </body>
 
