--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,12 +6,13 @@
             </h1>
     </div>
 </div>
+<!-- /.row -->
 
 <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-check-square-o fa-fw"></i>Mis eventos</h3>
+                    <h3 class="panel-title"><i class="fa fa-calendar fa-fw"></i>Mis eventos</h3>
                 </div>
                 <div class="panel-body">
                     <center>
@@ -23,3 +24,4 @@
             </div>
         </div>
 </div>
+<!-- /.row -->
