--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,112 +1,110 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<meta charset="UTF-8">
+<html lang="en">
 
-<title>Elegant Login - Designscrazed</title>
-<style>
+    <head>
 
-body {
-    background: url('assets/images/dark_embroidery.png') no-repeat fixed center center;
-    background-size: cover;
-    font-family: Montserrat;
-}
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Bootstrap Login Form Template</title>
+    </head>
 
-.logo {
-    width: 213px;
-    height: 36px;
-    background: url('http://i.imgur.com/fd8Lcso.png') no-repeat;
-    margin: 30px auto;
-}
+    <body background="1.jpg">
+        <style>
+        div.form-top {
+            overflow: hidden;
+            padding: 0 25px 15px 25px;
+            background: #444;
+            background: rgba(0, 0, 0, 0.35);
+            -moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
+            text-align: left;
+        }
 
-.login-block {
-    width: 320px;
-    padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    border-top: 5px solid #ff656c;
-    margin: 0 auto;
-}
+        div.form-top-left {
+            float: left;
+            width: 75%;
+            padding-top: 25px;
+        }
 
-.login-block h1 {
-    text-align: center;
-    color: #000;
-    font-size: 18px;
-    text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 20px;
-}
+        div.form-box {
+            margin-top: 150px;
+            width: 50%;
+        }   
 
-.login-block input {
-    width: 100%;
-    height: 42px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-    font-size: 14px;
-    font-family: Montserrat;
-    padding: 0 20px 0 50px;
-    outline: none;
-}
-
-.login-block input#username {
-    background: #fff url('http://i.imgur.com/u0XmBmv.png') 20px top no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input#username:focus {
-    background: #fff url('http://i.imgur.com/u0XmBmv.png') 20px bottom no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input#password {
-    background: #fff url('http://i.imgur.com/Qf83FTt.png') 20px top no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input#password:focus {
-    background: #fff url('http://i.imgur.com/Qf83FTt.png') 20px bottom no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input:active, .login-block input:focus {
-    border: 1px solid #ff656c;
-}
-
-.login-block button {
-    width: 100%;
-    height: 40px;
-    background: #ff656c;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #e15960;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-family: Montserrat;
-    outline: none;
-    cursor: pointer;
-}
-
-.login-block button:hover {
-    background: #ff7b81;
-}
-
-</style>
-</head>
-
-<body>
+        div.form-top-left h3 { margin-top: 0; color: #fff; }
+        div.form-top-left p { opacity: 0.8; color: #fff; }
 
 
-<div class="login-block">
-    <h1>BIENVENIDO</h1>
-    <%= link_to user_omniauth_authorize_path(:google_oauth2)+"/" do %>
-      <button><i class="fa fa-google fa-fw"></i>Inicia sesion con google</button>
-    <% end %>
-</div>
-</body>
+        div.form-bottom {
+            padding: 25px 25px 30px 25px;
+            background: #444;
+            background: rgba(0, 0, 0, 0.3);
+            -moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
+            text-align: left;
+        }   
+
+        div.form-bottom form button.btn {
+            width: 100%;
+            font-size: 25px;
+        }
+
+
+        button.btn {
+            height: 50px;
+            margin: 0;
+            padding: 0 20px;
+            vertical-align: middle;
+            background: #de615e;
+            border: 0;
+            font-family: 'Roboto', sans-serif;
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 50px;
+            color: #fff;
+            -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+            text-shadow: none;
+            -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
+            -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+        }
+
+        button.btn:hover { opacity: 0.6; color: #fff; }
+
+        button.btn:active { outline: 0; opacity: 0.6; color: #fff; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
+
+        button.btn:focus { outline: 0; opacity: 0.6; background: #de615e; color: #fff; }
+
+        button.btn:active:focus, button.btn.active:focus { outline: 0; opacity: 0.6; background: #de615e; color: #fff; }
+
+        </style>
+
+        <!-- Top content -->
+        <div class="top-content">
+            
+            <div class="inner-bg">
+                <div class="container" align="center">
+                    <div class="row">
+                        <div class="col-sm-6 col-sm-offset-3 form-box">
+
+                            <div class="form-top">
+                                <div class="form-top-left">
+                                    <h3>BIENVENIDO</h3>
+                                </div>
+                            </div>
+
+                            <div class="form-bottom">
+                                <form role="form" action="" method="post" class="login-form">
+                                            <%= link_to user_omniauth_authorize_path(:google_oauth2)+"/" do %>
+                                              <button type="submit" class="btn"><i class="fa fa-google fa-fw"></i>Inicia sesion con google</button>
+                                            <% end %>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+
+    </body>
 
 </html>
