--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -22,6 +22,11 @@
 
 <!--Si hay materias, iteramos una por una y le damos formato-->
 <% @subjects.each do |subject| %>
+  <%if current_user.subjects.exists?(subject.id)%>
+    <% imagen="<i class=\"fa fa-check-square fa-fw\"></i>".html_safe%>
+  <%else%>
+    <%imagen=""%>
+  <%end%>
   <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
@@ -29,7 +34,7 @@
                     <!--Encabezado con enlace a la materia-->
                     <h3 class="panel-title">
                         <%= link_to subject do %>
-                          <i class="fa fa-book fa-fw"></i><%=Time.now.year%>-<%=subject.semester%> <%=subject.name%>
+                          <i class="fa fa-book fa-fw"></i><%=Time.now.year%>-<%=subject.semester%> <%=subject.name%> <%=imagen%>
                         <% end %>
                     </h3>
                 </div>
@@ -44,10 +49,11 @@
                                 <i class="fa fa-edit fa-fw"></i> Editar
                             <% end %>
                             |
-                            <%= link_to subject, method: :delete, data: { confirm: 'Estas seguro?' } do %>
+                            <%= link_to subject, method: :delete, data: { confirm: 'Estas seguro de querer eliminar esta materia?' } do %>
                                 <i class="fa fa-trash fa-fw"></i> Eliminar
                             <% end %>
-                          <%elsif current_user.is_normal_user? && %>
+                          <%end%>
+                          <%if current_user != subject.user && !current_user.subjects.exists?(subject.id) %>
                             <%= link_to subscriptions_path(:subject_id => subject.id),method: :post do %>
                                 <i class="fa fa-plus fa-fw"></i> Agregar a mis materias
                             <% end %>
