--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-lg-12">
             <h1 class="page-header">
-                Mis Materias
+                Mis Subscripciones
             </h1>
     </div>
 </div>
@@ -47,10 +47,9 @@
                           <p><strong>Nombre del profesor: </strong><%= subject.user.name %></p>
                           <p><strong>Numero de grupo: </strong><%= subject.group_number %></p>
                           <p><strong>Descripcion: </strong><%= subject.body %></p>
-                          <%= link_to subscription,method: :delete do %>
-                              <i class="fa fa-plus fa-fw"></i> Eliminar de mis materias
-                          <% end %>
-
+                            <%= link_to subscription,method: :delete, data:{ confirm: 'Dejar de seguir esta materia?' } do %>
+                                <i class="fa fa-plus fa-fw"></i> Dejar de seguir
+                            <% end %>
                      </div>
                 </div>
             </div>
