Cambio de nombre de la aplicacion

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <%=link_to "PagWeb" ,root_url,class:"navbar-brand" %>
+            <%=link_to "BetterHandle" ,root_url,class:"navbar-brand" %>
         </div>
         <ul class="nav navbar-right top-nav">
             <!-- Muestra el nombre de el usuario actual y despliega menu-->
